# utility_calculator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pylintrc  pyproject.toml  test.json  util_calc_db.py
.github/workflows/: .pytest.yml  pytest.yml
docs/: index.html  search.json
docs/utility_calculator/: database.html  main.html  misc.html
tests/: choose_test.py  clean_input_test.py  confirm_test.py  get_float_test.py  get_month_test.py
utility_calculator/: __init__.py  __main__.py  database.py  db_functions.py  main.py  misc.py  user_data_dir.py  util_calc_db.py  utils.py
