[tool.poetry]
name = "utility_calculator"
version = "0.1.0"
description = "a script to calculate utilities"
authors = ["sudo-julia <jlearning@tuta.io>", "Julian E Andrews <juliane.andrews@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
