[tool.poetry]
name = "utility_calculator"
version = "0.2.0"
description = "Calculate your utilties bill"
authors = ["sudo-julia <jlearning at tuta dot io>", "Julian E Andrews <juliane.andrews@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
